external-crates/move/crates/move-compiler/tests/move_check/expansion/use_spec_schema_invalid_as.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
warning[W00001]: DEPRECATED. will be removed
  ┌─ tests/move_check/expansion/use_spec_schema_invalid_as.move:3:5
  │  
3 │ ╭     spec schema Foo<T> {
4 │ │         ensures true;
5 │ │     }
  │ ╰─────^ Specification blocks are deprecated and are no longer used

error[E03003]: unbound module member
  ┌─ tests/move_check/expansion/use_spec_schema_invalid_as.move:9:18
  │
2 │ module X {
  │        - Module '0x2::X' declared here
  ·
9 │     use 0x2::X::{Foo as foo};
  │                  ^^^ Invalid 'use'. Unbound member 'Foo' in module '0x2::X'

warning[W00001]: DEPRECATED. will be removed
   ┌─ tests/move_check/expansion/use_spec_schema_invalid_as.move:12:5
   │  
12 │ ╭     spec t {
13 │ │         apply foo<S> to t;
14 │ │     }
   │ ╰─────^ Specification blocks are deprecated and are no longer used
